<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_centerHorizontal="false"
    android:layout_centerVertical="true"
    android:textAlignment="center"
    tools:context=".AddTaskActivity"
    android:id="@+id/addTaskContainer">

    <Button
        android:id="@+id/backButton"
        android:layout_width="100dp"
        android:layout_height="50dp"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_gravity="center"
        android:layout_marginStart="152dp"
        android:layout_marginTop="13dp"
        android:layout_marginEnd="12dp"
        android:layout_marginBottom="18dp"
        android:text="Back" />

    <Button
        android:id="@+id/saveButton"
        android:layout_width="100dp"
        android:layout_height="50dp"
        android:layout_below="@+id/calendarView"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_gravity="center"
        android:layout_marginStart="152dp"
        android:layout_marginTop="42dp"
        android:layout_marginEnd="138dp"
        android:layout_marginBottom="18dp"
        android:text="Save" />

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/taskNameInput"
        android:layout_width="381dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/backButton"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="10dp"
        android:hint="Task Name" />

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/taskDescriptionInput"
        android:layout_width="381dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/taskNameInput"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="10dp"
        android:hint="Description" />

    <CalendarView
        android:id="@+id/calendarViewAddTask"
        android:layout_width="match_parent"
        android:layout_height="432dp"
        android:layout_below="@+id/taskDescriptionInput" />
</RelativeLayout>