<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".MainActivity"
    android:id="@+id/mainActivityContainer">


    <CalendarView
        android:id="@+id/calendarView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"/>

    <Button
        android:id="@+id/addTaskButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="301dp"
        android:layout_marginEnd="36dp"
        android:text="Add" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/taskList"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/addTaskButton"
        android:layout_marginTop="0dp" />

</RelativeLayout>