<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:id="@+id/taskContainer">

    <CheckBox
        android:id="@+id/taskCompleted"
        android:layout_width="45dp"
        android:layout_height="39dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="8dp"
        app:layout_constraintEnd_toStartOf="@+id/taskName"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/taskName"
        android:layout_width="303dp"
        android:layout_height="37dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="40dp"
        android:text="task"
        android:textSize="34sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/taskDescription"
        android:layout_width="303dp"
        android:layout_height="19dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="36dp"
        android:text="TextView"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/taskName" />
</androidx.constraintlayout.widget.ConstraintLayout>